<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/app_image"
        android:src="@mipmap/ic_banner" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:shadowColor="@color/grey"
        android:shadowDx="3.5"
        android:shadowDy="2.2"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text5"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:padding="10dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_background"
        android:text="@string/capture_image"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_background"
        android:text="@string/choose_an_image"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow" />
</RelativeLayout>