<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StorageActivity">

    <ImageView
        android:id="@+id/image2"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textview_back"
        android:contentDescription="@string/image_container"
        android:padding="5dp"
        android:src="@mipmap/ic_storage" />

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/image2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/textview_back"
        android:gravity="center_horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_image_caption"
            android:textStyle="bold" />
    </ScrollView>

    <Button
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/blue"
        android:text="@string/copy"
        android:textStyle="bold" />

    <Button
        android:id="@+id/choose"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/copy"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_background"
        android:text="@string/choose"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow" />

    <Button
        android:id="@+id/detect"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/choose"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_background"
        android:text="@string/detect_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow" />

</RelativeLayout>